# text_analyzer

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/text_analyzer/: __init__.py  gui.py
src/: lib.rs
